--- a/libs/content/src/resumeSE.mdx
+++ b/libs/content/src/resumeSE.mdx
@@ -61,7 +61,7 @@ lastEditedAt: 'Jan 14, 2026'
 </Box>
 <Divider label={<><IconBriefcase size={14} /><Text color="dimmed" ml={5} size="xs">Experience</Text></>} labelPosition="Center"  />
 <TimelineItem  title="Director Visual Intelligence" org="Solera" startYear="2021" endYear="2026">Leading a distributed, autonomous, and cross-functional team of 10-15 consisting of a full stack engineering team and a data science and ML engineering team that owns the technology component at the base of Solera’s suite of AI-driven claims solutions as well as the platform that is serving these components to the consumers. Personally owning the team’s web apps including a demo app and a docs app with a blog. Wrote a krakend plugin in Go and have been leading efforts to optimize and continuously improve the team’s delivery processes and practices (e.g. continuous delivery) focused on DORA metrics and have been actively involved in decisions regarding the design of our platform.</TimelineItem>
-<TimelineItem  title="Technical Product Manager" org="Solera" startYear="2019" endYear="2021">asdf</TimelineItem>
+<TimelineItem  title="Technical Product Manager" org="Solera" startYear="2019" endYear="2021"></TimelineItem>
 <TimelineItem  title="Product Owner Data Pipeline" org="Siroop" startYear="2016" endYear="2018">As product owner in a full stack delivery team of 7 engineers I lead the efforts to stabilize the product data pipeline, eliminate tech debt and to implement new features to directly advance the customer journey. At the same time I was driving the evolution of the search experience in the shop and in parallel the development of an entirely new reactive search UI.</TimelineItem>
 <TimelineItem  title="Fleet Managere EMEA" org="Google Streetview" startYear="2013" endYear="2014">Took over the management of the Street View EMEA fleet after only a few weeks and despite starting with a contract limited to three months. Successfully realized a fleet renewal program for the whole region and successfully built strategic partnerships with suppliers.</TimelineItem>
 <TimelineItem  title="Junior Researcher" org="Eawag" startYear="2010" endYear="2010">As part of my civilian service spent 6 months in Nepal analyzing the viability of business case for a process to recover nutrients from human waste water.</TimelineItem>
