refactor: migrate from Mantine UI to Tailwind CSS v4
- Replace Mantine components with custom Tailwind-based components
- Remove Emotion/Mantine dependencies, add Tailwind CSS v4 with PostCSS
- Add lucide-react icons, class-variance-authority, tailwind-merge
- Create reusable UI components (Button, GoldenPageLayout, resume components)
- Update globals.css with custom theme colors and print styles
- Simplify _app.tsx and _document.tsx without Mantine providers

--- a/libs/content/src/resume.mdx
+++ b/libs/content/src/resume.mdx
@@ -14,7 +14,7 @@ contact:
 <Header />
 
 <Summary>
-Hands-on **Engineering Manager** with *10+ years of software development and delivery experience* and *5+ years of experience leading and growing remote, cross-functional teams* building and owning end-to-end complex, data-heavy, and computer-vision-powered software solutions. Looking for an opportunity to leverage my technical expertise, leadership skills, and passion for growing engineers and fostering highly productive teams.
+Hands-on **Engineering Manager** with *10+ years of software development and delivery experience* and *5+ years of experience leading and growing distributed, cross-functional teams* building and owning end-to-end complex, data-heavy, and computer-vision-powered software solutions. Looking for an opportunity to leverage my technical expertise, leadership skills, and passion for growing engineers and fostering highly productive teams.
 </Summary>
 
 <Section title="Experience" icon="briefcase">
@@ -44,17 +44,17 @@ Hands-on **Engineering Manager** with *10+ years of software development and del
 </Section>
 
 <Section title="Education" icon="school">
-  <Job title="Full-Stack Web Engineering Course" org="Codeworks" start="2018" end="2018">
+  <Training title="Full-Stack Web Engineering Course" org="Codeworks" start="2018" end="2018">
     3 month immersive web engineering course to deepen web development skills and foundational knowledge. Focused on data structures, code patterns as well as modern front and back end frameworks/technologies such as React, Node.js, GraphQL, TypeScript.
-  </Job>
+  </Training>
 
-  <Job title="B.Sc. in Business Engineering (Dipl.-Ing.)" org="UAS Northwestern Switzerland" start="2003" end="2006">
+  <Training title="B.Sc. in Business Engineering (Dipl.-Ing.)" org="UAS Northwestern Switzerland" start="2003" end="2006">
     Specialization in Supply Chain Management. Key subjects included software engineering, product management, project management, production processes, operations, management, marketing and sales.
-  </Job>
+  </Training>
 
-  <Job title="Computer Science Apprenticeship" org="Swisscom" start="1999" end="2003">
-    Combination of on and off-the-job vocational training focusing on systems engineering and administration, application development and electrical engineering. Including vocational baccalaureate for university admission.
-  </Job>
+  <Training title="Computer Science Apprenticeship" org="Swisscom" start="1999" end="2003">
+    Combination of on and off-the-Training vocational training focusing on systems engineering and administration, application development and electrical engineering. Including vocational baccalaureate for university admission.
+  </Training>
 </Section>
 
 <Section title="Skills" icon="lightbulb">
